<?xml version="1.0"?>
<package format="2">
  <name>uuv_plume_msgs</name>
  <version>2.0.0</version>
  <description>ROS2 Port of the Plume simulator messages and services package.</description>
  <maintainer email="tiko@uni-bremen.de">Till Koch</maintainer>
  <author email="tiko@uni-bremen.de">Till Koch</author>

  <!--  Original ROS1 Package Contact -->
  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <license>Apache-2.0</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
