<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uuv_plume_simulator</name>
  <description>ROS2 Port of the Plume simulator package</description>
  <maintainer email="tiko@uni-bremen.de">Till Koch</maintainer>
  <author email="tiko@uni-bremen.de">Till Koch</author>

  <!--  Original ROS1 Package Contact -->
  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

<!--  <test_depend>ament_copyright</test_depend>-->
<!--  <test_depend>ament_flake8</test_depend>-->
<!--  <test_depend>ament_pep257</test_depend>-->
<!--  <test_depend>python3-pytest</test_depend>-->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
